# filetalk

./: .gitignore  CLAUDE.md  HISTORY.md  HOW-TO-TEST.txt  README.md  TODO.txt  calculate_example.py  filetalk.py  pyproject.toml
docs/claude-code/: programming-guidelines_for-claude_custom_patchboard-router.json
docs/historical/: 2025-06-05_epoch-3-architecture_v1.md  2026-02-02_runcards-experiment_lessons-learned.md
docs/ideas/: filetalk.llm-gateway.spec.v1.json
docs/manifesto/: 2025-06-04_filetalk-manifesto.md  2026-01-17_program-execution-model.json  2026-01-17_program-execution-model.md
docs/spec/: component-id-card.v1.json  filetalk-core.v1.json  filetalk-core.v1.md  filetalk-domains.json  filetalk-file-transport.v1.md  filetalk-invocation.v1.json  intraflow.json  intraflow_user-api.json  json-run-cards.v1.json  parallel-specs.json  patchboard-core.v1.json  patchboard-file-transport.v1.json  patchboard-router.v0.1.json  silk-road-concept.json
docs/status/: 2026-02-16_intraflow_functional-areas-evaluation.json  2026-02-16_intraflow_functional-areas-evaluation_2.json  2026-02-16_intraflow_next-steps.json  2026-02-17_intraflow_functional-areas-evaluation_3.json
manifesto/: 2025-06-04_filetalk-manifesto.txt
notes/dailies/: 2026-01-12.json  2026-01-12.txt  2026-02-16.txt
notes/history/: epocs.json  history.md
patchboard/: 2025-06-05_epoch-3-architecture_v1.txt
spec/: core-spec.json  filetalk-core.v1.json
src/filetalk_process/: core.py  pretty.py
src/filetalk_runner/: __main__.py  runner.py
src/intraflow/: __init__.py  (+1 more)
tests/: test_intraflow.py
(+12 files in other folders)
